<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/messageInput"
        android:layout_width="178dp"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />

    <EditText
        android:id="@+id/moneyInput"
        android:layout_width="140dp"
        android:layout_height="34dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.34" />

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="370dp"
        android:layout_height="498dp"
        android:visibility="gone"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="6dp">

        <TextView
            android:id="@+id/textView26"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView11"
            android:layout_alignLeft="@+id/textView27"
            android:layout_alignStart="@+id/textView27"
            android:fontFamily="sans-serif-smallcaps"
            android:text="texto"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView19"
            android:layout_alignBottom="@+id/textView19"
            android:layout_alignLeft="@+id/textView26"
            android:layout_alignStart="@+id/textView26"
            android:fontFamily="sans-serif-smallcaps"
            android:text="texto"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView9"
            android:layout_alignBottom="@+id/textView9"
            android:layout_alignLeft="@+id/textView25"
            android:layout_alignStart="@+id/textView25"
            android:fontFamily="sans-serif-smallcaps"
            android:text="texto"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView18"
            android:layout_alignBottom="@+id/textView18"
            android:layout_alignLeft="@+id/textView24"
            android:layout_alignStart="@+id/textView24"
            android:fontFamily="sans-serif-smallcaps"
            android:text="TextView"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView17"
            android:layout_alignBottom="@+id/textView17"
            android:layout_alignLeft="@+id/textView23"
            android:layout_alignStart="@+id/textView23"
            android:fontFamily="sans-serif-smallcaps"
            android:text="TextView"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView16"
            android:layout_alignBottom="@+id/textView16"
            android:layout_alignLeft="@+id/textView22"
            android:layout_alignStart="@+id/textView22"
            android:fontFamily="sans-serif-smallcaps"
            android:text="texto"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView14"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_toRightOf="@+id/textView18"
            android:fontFamily="sans-serif-smallcaps"
            android:text="TextView"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView12"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="104dp"
            android:text="@string/mail"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView14"
            android:layout_alignStart="@+id/textView14"
            android:layout_alignTop="@+id/textView10"
            android:text="@string/usuario"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView11"
            android:layout_alignStart="@+id/textView11"
            android:layout_below="@+id/textView11"
            android:layout_marginTop="18dp"
            android:text="@string/speed"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView9"
            android:layout_alignStart="@+id/textView9"
            android:layout_below="@+id/textView9"
            android:layout_marginTop="20dp"
            android:text="@string/pass"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView18"
            android:layout_alignStart="@+id/textView18"
            android:layout_below="@+id/textView18"
            android:layout_marginTop="15dp"
            android:text="@string/language"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView17"
            android:layout_alignStart="@+id/textView17"
            android:layout_below="@+id/textView17"
            android:layout_marginTop="20dp"
            android:text="@string/dinero"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView16"
            android:layout_alignStart="@+id/textView16"
            android:layout_below="@+id/textView16"
            android:layout_marginTop="19dp"
            android:text="@string/timemining"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView14"
            android:layout_alignStart="@+id/textView14"
            android:layout_below="@+id/textView14"
            android:layout_marginTop="19dp"
            android:text="@string/GPU"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/info"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton"
            style="@android:style/Widget.Material.Light.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView24"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/textView24"
            android:layout_marginBottom="14dp"
            android:adjustViewBounds="true"
            android:backgroundTint="@color/colorPrimaryDark"
            android:onClick="mensajeEnviado"
            app:srcCompat="@android:drawable/ic_dialog_email"
            tools:ignore="NewApi,UnusedAttribute" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView22"
            android:layout_alignEnd="@+id/textView22"
            android:layout_alignLeft="@+id/textView22"
            android:layout_alignRight="@+id/textView22"
            android:layout_alignStart="@+id/textView22"
            android:layout_marginBottom="15dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/user_1"
            android:textSize="16sp"
            tools:ignore="UnusedAttribute"
            tools:layout_editor_absoluteX="132dp"
            tools:layout_editor_absoluteY="16dp" />

        <ImageButton
            android:id="@+id/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageButton"
            android:layout_toLeftOf="@+id/imageButton"
            android:layout_toStartOf="@+id/imageButton"
            android:backgroundTint="@color/colorPrimaryDark"
            android:tint="@android:color/holo_green_light"
            app:srcCompat="@android:drawable/ic_menu_add" />

        <ImageButton
            android:id="@+id/quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/more"
            android:layout_toLeftOf="@+id/more"
            android:layout_toStartOf="@+id/more"
            android:backgroundTint="@color/colorPrimaryDark"
            android:tint="@android:color/holo_red_light"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    </RelativeLayout>

    <ImageButton
        android:id="@+id/sendbtn"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.309"
        app:srcCompat="@android:drawable/ic_media_play" />

    <TextView
        android:id="@+id/titulopers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="Ingresar Dinero"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.016" />

    <ImageButton
        android:id="@+id/backd"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:tint="@android:color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.309"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <ImageButton
        android:id="@+id/bin"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.312"
        app:srcCompat="@mipmap/bin" />

    <TextView
        android:id="@+id/delete"
        android:layout_width="329dp"
        android:layout_height="58dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="Est"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153" />

    <ImageButton
        android:id="@+id/eypo"
        android:layout_width="79dp"
        android:layout_height="77dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/holo_green_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289"
        app:srcCompat="@mipmap/eur" />

</android.support.constraint.ConstraintLayout>
